Fix alignment property in CSS

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 *{
   margin:0px;
   padding:0px;
+  align-item:center;
 }
